fixed mobile navbar collapse

--- a/14Lesson/01Final/css/style.css
+++ b/14Lesson/01Final/css/style.css
@@ -244,3 +244,12 @@ footer a:hover {
 .padding {
   padding-left: 80px;
 }
+
+.icons {
+  font-size: 25px;
+  padding: 20px;
+}
+
+.copy {
+  padding: 20px;
+}
